--- a/Kickstarter/en.lproj/MainMenu.xib
+++ b/Kickstarter/en.lproj/MainMenu.xib
@@ -48,6 +48,9 @@
 			<object class="NSCustomObject" id="1050">
 				<string key="NSClassName">NSApplication</string>
 			</object>
+			<object class="NSCustomObject" id="154319256">
+				<string key="NSClassName">SUUpdater</string>
+			</object>
 			<object class="NSCustomObject" id="976324537">
 				<string key="NSClassName">AppDelegate</string>
 			</object>
@@ -56,9 +59,6 @@
 			</object>
 			<object class="NSCustomObject" id="865668369">
 				<string key="NSClassName">AppController</string>
-			</object>
-			<object class="NSCustomObject" id="154319256">
-				<string key="NSClassName">SUUpdater</string>
 			</object>
 			<object class="NSArrayController" id="728842748">
 				<bool key="NSEditable">YES</bool>
@@ -147,6 +147,14 @@
 					<object class="NSMenuItem" id="923260249">
 						<reference key="NSMenu" ref="970828785"/>
 						<string key="NSTitle">Preferences...</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="101869749"/>
+						<reference key="NSMixedImage" ref="757934790"/>
+					</object>
+					<object class="NSMenuItem" id="814778782">
+						<reference key="NSMenu" ref="970828785"/>
+						<string key="NSTitle">Check for Updates</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSOnImage" ref="101869749"/>
@@ -609,7 +617,7 @@
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="845898869">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSScrollView" id="395836070">
@@ -1119,7 +1127,6 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{401, 484}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="337636672"/>
 					<string key="NSReuseIdentifierKey">_NS:20</string>
 				</object>
@@ -1586,6 +1593,14 @@
 					</object>
 					<int key="connectionID">1275</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">checkForUpdates:</string>
+						<reference key="source" ref="154319256"/>
+						<reference key="destination" ref="814778782"/>
+					</object>
+					<int key="connectionID">1319</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -1633,11 +1648,12 @@
 							<reference ref="647270308"/>
 							<reference ref="1071809171"/>
 							<reference ref="923260249"/>
-							<reference ref="601943544"/>
 							<reference ref="750904413"/>
 							<reference ref="928590992"/>
 							<reference ref="911051902"/>
 							<reference ref="63706111"/>
+							<reference ref="601943544"/>
+							<reference ref="814778782"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -3502,11 +3518,6 @@
 						<reference key="parent" ref="970828785"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">1291</int>
-						<reference key="object" ref="601943544"/>
-						<reference key="parent" ref="970828785"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">1293</int>
 						<reference key="object" ref="454797073"/>
 						<reference key="parent" ref="576398404"/>
@@ -3527,11 +3538,6 @@
 						<reference key="parent" ref="970828785"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">1300</int>
-						<reference key="object" ref="154319256"/>
-						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">1301</int>
 						<reference key="object" ref="928590992"/>
 						<reference key="parent" ref="970828785"/>
@@ -3549,6 +3555,21 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">1311</int>
 						<reference key="object" ref="63706111"/>
+						<reference key="parent" ref="970828785"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1316</int>
+						<reference key="object" ref="601943544"/>
+						<reference key="parent" ref="970828785"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1317</int>
+						<reference key="object" ref="154319256"/>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1318</int>
+						<reference key="object" ref="814778782"/>
 						<reference key="parent" ref="970828785"/>
 					</object>
 				</array>
@@ -3686,16 +3707,17 @@
 				<string key="1281.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1282.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1290.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="1291.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1293.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1294.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1295.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1296.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="1300.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1301.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1305.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1308.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1311.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1316.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1317.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1318.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="420.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="494.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="536.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3832,7 +3854,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1312</int>
+			<int key="maxID">1319</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
